# TimeSeriesForecastingReview

./: .gitignore  README.md  document.aux  document.hst  document.toc  macros.tex  notes.md  pyproject.toml
checkpoints/: epoch=0-step=50-v1.ckpt  epoch=0-step=50-v2.ckpt  epoch=0-step=50-v3.ckpt  epoch=0-step=50-v4.ckpt  epoch=0-step=50-v5.ckpt  epoch=0-step=50.ckpt  epoch=1-step=100-v1.ckpt  epoch=1-step=100-v10.ckpt  epoch=1-step=100-v11.ckpt  epoch=1-step=100-v12.ckpt  epoch=1-step=100-v13.ckpt  epoch=1-step=100-v14.ckpt  epoch=1-step=100-v15.ckpt  epoch=1-step=100-v16.ckpt  epoch=1-step=100-v17.ckpt  epoch=1-step=100-v18.ckpt  epoch=1-step=100-v19.ckpt  epoch=1-step=100-v2.ckpt  epoch=1-step=100-v20.ckpt  epoch=1-step=100-v21.ckpt  epoch=1-step=100-v22.ckpt  epoch=1-step=100-v23.ckpt  epoch=1-step=100-v24.ckpt  epoch=1-step=100-v25.ckpt  epoch=1-step=100-v26.ckpt  epoch=1-step=100-v27.ckpt  epoch=1-step=100-v28.ckpt  epoch=1-step=100-v29.ckpt  epoch=1-step=100-v3.ckpt  epoch=1-step=100-v30.ckpt  epoch=1-step=100-v31.ckpt  epoch=1-step=100-v32.ckpt  epoch=1-step=100-v33.ckpt  epoch=1-step=100-v34.ckpt  epoch=1-step=100-v35.ckpt  epoch=1-step=100-v36.ckpt  epoch=1-step=100-v37.ckpt  epoch=1-step=100-v38.ckpt  epoch=1-step=100-v39.ckpt  epoch=1-step=100-v4.ckpt  (+63 more)
data/: passengers.csv
docs/: notes.md
sections/: exploratory_analysis.aux  exploratory_analysis.tex  future_work.aux  method.tex  notes.aux
src/: LGBM.py  LGBMplut.py  analyzing_results.py  data_loader.py  distribution_plots.py  exploratory_analysis.py  filterpy_kalman.py  fit_profile.py  functions.py  (+12 more)
(+166 files in other folders)
